--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -26,6 +26,12 @@
             "msgNotBetweenMinMax": "Datum/Uhrzeit liegen nicht im erlaubten Wertebereich"
         }
     },
+    "Koala.util.Routing": {
+        "statics": {
+            "illegalFilter": "fr:Der Permalink enthält einen fehlerhaften '{0}'-Filter.",
+            "unknownFilter": "fr:Der Permalink enthält einen unbekannten Filter."
+        }
+    },
     "Koala.util.String": {
         "statics": {
             "defaultDateFormat": "d/m/Y H:i:s"
