This adds the exportToPng button to the cartowindow charts.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -73,7 +73,8 @@
             "data": {
                 "expandToLeft": "Ältere Daten anzeigen",
                 "expandToRight": "Neuere Daten anzeigen",
-                "toggleLegendVisibility": "Legendensichtbarkeit umstellen"
+                "toggleLegendVisibility": "Legendensichtbarkeit umstellen",
+                "exportToPngText": "Download Chart"
             }
         }
     },
