--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -73,7 +73,8 @@
             "data": {
                 "expandToLeft": "Show older data",
                 "expandToRight": "Show newer data",
-                "toggleLegendVisibility": "Toggle legend visibility"
+                "toggleLegendVisibility": "Toggle legend visibility",
+                "exportToPngText": "Download Chart"
             }
         }
     },
