--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -408,6 +408,10 @@
     "Koala.view.window.TimeSeriesWindow": {
         "config": {
             "data": {
+                "autorefresh": "fr:Autorefresh",
+                "autorefreshExpand": "fr:Extend time window",
+                "autorefreshMove": "fr:Move time window",
+                "autorefreshOptions": "fr:Autorefresh options",
                 "title": "fr:Zeitreihe",
                 "dateFieldStartLabel": "fr:Start",
                 "dateFieldEndLabel": "fr:Ende",
