adressed some comments, integrated snippet from client

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -75,6 +75,7 @@
                 "autorefreshExpand": "Zeitausschnitt erweitern",
                 "autorefreshMove": "Zeitausschnitt verschieben",
                 "autorefreshOptions": "Autorefresh Optionen",
+                "info": "Info",
                 "expandToLeft": "Ältere Daten anzeigen",
                 "expandToRight": "Neuere Daten anzeigen",
                 "toggleLegendVisibility": "Legendensichtbarkeit umstellen",
