--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -69,6 +69,7 @@
                 "autorefreshExpand": "fr:Extend time window",
                 "autorefreshMove": "fr:Move time window",
                 "autorefreshOptions": "fr:Autorefresh options",
+                "info": "Info",
                 "expandToLeft": "fr:Show older data",
                 "expandToRight": "fr:Show newer data",
                 "toggleLegendVisibility": "fr:Toggle legend visibility",
