--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -75,6 +75,7 @@
                 "autorefreshExpand": "Extend time window",
                 "autorefreshMove": "Move time window",
                 "autorefreshOptions": "Autorefresh options",
+                "info": "Info",
                 "expandToLeft": "Show older data",
                 "expandToRight": "Show newer data",
                 "toggleLegendVisibility": "Toggle legend visibility",
