added irix print button to bar chart window

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -407,7 +407,8 @@
                 "undoBtnText": "…zurückzoomen",
                 "uncertaintyCheckboxLabel": "Messungenauigkeit",
                 "exportAsImageBtnText": "Als Bild exportieren",
-                "toggleGroupingButtonText": "Gruppierung wechseln"
+                "toggleGroupingButtonText": "Gruppierung wechseln",
+                "printChartButtonText": "IMIS-Druck"
             }
         }
     },
