--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -406,7 +406,8 @@
                 "undoBtnText": "…zoom back",
                 "uncertaintyCheckboxLabel": "Uncertainty",
                 "exportAsImageBtnText": "Export as image",
-                "toggleGroupingButtonText": "Toggle grouping"
+                "toggleGroupingButtonText": "Toggle grouping",
+                "printChartButtonText": "IMIS Print"
             }
         }
     },
