design irixPrint-Btn as DokPool-Button

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -438,7 +438,7 @@
     "Koala.view.window.Print": {
         "config": {
             "data": {
-                "title": "Kartendruck"
+                "title": "Drucken"
             }
         }
     },
