added more hooks for mapfish form

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -248,6 +248,18 @@
                 "layoutComboLabel": "Layout",
                 "attributesTitle": "Eigenschaften",
                 "mapTitleLabel": "Kartentitel",
+                "map_label": "Karte",
+                "northArrowLabel": "Nordpfeil",
+                "northArrowBoxLabel": "...verwenden ? JO",
+                "scaleBar_label": "Maßstab",
+                "scaleBar_boxLabel": "...verwenden ? JO",
+                "map_attribution_label": "Karten-Attributierung",
+                "is_exercise_label": "ÜBUNG",
+                "title_label": "Titel",
+                "description_label": "Beschreibung",
+                "comment_label": "Kommentar",
+                "impressum_label": "Impressum",
+                "doc_creator_label": "Ersteller",
                 "serverUploadSuccessTitle": "Druck erfolgreich",
                 "serverUploadSuccess": "Druck wurde erfolgreich initiiert.",
                 "serverErrorTitle": "Fehler beim Druck",
