--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -237,17 +237,29 @@
     "Koala.view.form.Print": {
         "config": {
             "data": {
-                "title": "en:Drucken",
-                "labelDpi": "en:DPI",
-                "printButtonSuffix": "en:anfordern",
-                "downloadButtonPrefix": "en:Download",
-                "printFormat": "en:pdf",
-                "printAppFieldSetTitle": "en:Vorlage",
-                "genericFieldSetTitle": "en:Einstellungen",
-                "formatComboLabel": "en:Format",
-                "layoutComboLabel": "en:Layout",
-                "attributesTitle": "en:Eigenschaften",
+                "title": "print",
+                "labelDpi": "DPI",
+                "printButtonSuffix": "get print",
+                "downloadButtonPrefix": "download",
+                "printFormat": "pdf",
+                "printAppFieldSetTitle": "template",
+                "genericFieldSetTitle": "settings",
+                "formatComboLabel": "format",
+                "layoutComboLabel": "layout",
+                "attributesTitle": "attributes",
                 "mapTitleLabel": "en:Kartentitel",
+                "map_label": "map",
+                "northArrow_label": "north arrow",
+                "northArrow_boxLabel": "en:...verwenden ?",
+                "scaleBar_label": "scalebar",
+                "scaleBar_boxLabel": "en:...verwenden ?",
+                "map_attribution_label": "map attribution",
+                "is_exercise_label": "EXERCISE",
+                "title_label": "titel",
+                "description_label": "description",
+                "comment_label": "comment",
+                "impressum_label": "impressum",
+                "doc_creator_label": "creator",
                 "serverUploadSuccessTitle": "Print successfully completed",
                 "serverUploadSuccess": "Print successfully initiated.",
                 "serverErrorTitle": "Print Error",
