set version in locales to 1.9.0-SNAPSHOT

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -586,7 +586,7 @@
                                 "<li style='color:#294d71; font-weight:bold'>Geographical overview</li>"+
                                     "<div>The geographical overview allows you to navigate via an overview map. The scalebar serves as a reference with respect to the current view. As long as the mouse pointer is in the map, the geographical coordinates of the mouse pointer's current position are displayed to the right of the scalebar.</div><br />"+
                                 "<li style='color:#294d71; font-weight:bold'>Software version</li>"+
-                                    "<div>1.9.0.0</div>"+
+                                    "<div>1.9.0-SNAPSHOT</div>"+
                             "</ol>"
                 },
                 "profileSelection": {
@@ -1213,7 +1213,7 @@
                                 "<div>The legend explains the symbols used in the layers.</div>"+
                                 "<div>It is also possible to change the settings for the layer presentation. Via the legend, you can hide or show or even completely delete individual layers. You can activate or deactivate the layer query in the legend and you can change the filter settings. It is also possible to change the mapping order of the layers with the help of the arrow buttons.</div><br />"+
                             "<li style='color:#294d71; font-weight:bold'>Software-Version</li>"+
-                                "<div>1.9.0.0</div>"+
+                                "<div>1.9.0-SNAPSHOT</div>"+
                             "</ol>",
                 "helpMapTitle": "<h1 style='font-weight:bold; font-size:16px; color:black'>1. Map</h1>",
                 "helpMapHtml": "<div>The map displays the selected layers/data sets (please refer to Section <i>2.2 Selection</i> for details on adding layers). The layers \"Place names\", \"Contour lines\" and \"Background map - OSM\" are loaded by default. Tap into the map to open a temporary window that displays the geographical coordinates of the selected position.</div><br />"+
