added translations for north arrow & scale bar

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -276,7 +276,10 @@
                 "mapBboxButton": "Info",
                 "warnPrintTimedOutTitle": "Druckfehler",
                 "warnPrintTimedOutText": "Die Druckerzeugung hat das erlaubte Zeitlimit überschritten.",
-                "updateLegendtext": "Legendtext"
+                "updateLegendtext": "Legendentext",
+                "labelUse": "…verwenden?",
+                "northArrow": "Nordpfeil",
+                "scalebar": "Massstabsleiste"
             },
         }
     },
