added uncertainty button to carto window bar chart

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -80,7 +80,8 @@
                 "expandToRight": "Neuere Daten anzeigen",
                 "toggleLegendVisibility": "Legendensichtbarkeit umstellen",
                 "exportToPngText": "Download Chart",
-                "toggleGrouping": "Gruppierung tauschen"
+                "toggleGrouping": "Gruppierung tauschen",
+                "toggleUncertainty": "Messungenauigkeit umschalten"
             }
         }
     },
