--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -80,7 +80,8 @@
                 "expandToRight": "Show newer data",
                 "toggleLegendVisibility": "Toggle legend visibility",
                 "exportToPngText": "Download Chart",
-                "toggleGrouping": "Toggle grouping"
+                "toggleGrouping": "Toggle grouping",
+                "toggleUncertainty": "Toggle uncertainty"
             }
         }
     },
